--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 	<div id="tetris"></div>
 </body>
+
+<div id="score"></div>
+<div id="record"></div>
 <button id ="empezar">NEW GAME</button>
 <script src="prueba.js"></script>
 </html>
